// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`spinner (isCI = false) > message > sets message for next frame 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[35m◐[39m  foo",
]
`;

exports[`spinner (isCI = false) > process exit handling > prioritizes direct options over global settings 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[31m■[39m  Spinner cancel message
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > process exit handling > prioritizes direct options over global settings 2`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[31m▲[39m  Spinner error message
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > process exit handling > uses custom cancel message when provided directly 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[31m■[39m  Custom cancel message
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > process exit handling > uses custom error message when provided directly 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[31m▲[39m  Custom error message
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > process exit handling > uses default cancel message 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[31m■[39m  Canceled
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > process exit handling > uses global custom cancel message from settings 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[31m■[39m  Global cancel message
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > process exit handling > uses global custom error message from settings 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[31m▲[39m  Global error message
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > start > renders frames at interval 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[35m◐[39m  ",
  "[999D",
  "[J",
  "[35m◓[39m  ",
  "[999D",
  "[J",
  "[35m◑[39m  ",
]
`;

exports[`spinner (isCI = false) > start > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  foo",
]
`;

exports[`spinner (isCI = false) > start > renders timer when indicator is "timer" 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m   [0s]",
]
`;

exports[`spinner (isCI = false) > stop > renders cancel symbol if code = 1 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[31m■[39m  
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > stop > renders error symbol if code > 1 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[31m▲[39m  
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > stop > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[32m◇[39m  foo
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > stop > renders message without removing dots 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[32m◇[39m  foo.
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > stop > renders submit symbol and stops spinner 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[32m◇[39m  
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > message > sets message for next frame 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
  "
",
  "[999D",
  "[J",
  "[35m◐[39m  foo...",
]
`;

exports[`spinner (isCI = true) > process exit handling > prioritizes direct options over global settings 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[31m■[39m  Spinner cancel message
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > process exit handling > prioritizes direct options over global settings 2`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[31m▲[39m  Spinner error message
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > process exit handling > uses custom cancel message when provided directly 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[31m■[39m  Custom cancel message
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > process exit handling > uses custom error message when provided directly 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[31m▲[39m  Custom error message
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > process exit handling > uses default cancel message 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[31m■[39m  Canceled
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > process exit handling > uses global custom cancel message from settings 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[31m■[39m  Global cancel message
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > process exit handling > uses global custom error message from settings 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[31m▲[39m  Global error message
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > start > renders frames at interval 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
]
`;

exports[`spinner (isCI = true) > start > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  foo...",
]
`;

exports[`spinner (isCI = true) > start > renders timer when indicator is "timer" 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
]
`;

exports[`spinner (isCI = true) > stop > renders cancel symbol if code = 1 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
  "
",
  "[999D",
  "[J",
  "[31m■[39m  
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > stop > renders error symbol if code > 1 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
  "
",
  "[999D",
  "[J",
  "[31m▲[39m  
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > stop > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
  "
",
  "[999D",
  "[J",
  "[32m◇[39m  foo
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > stop > renders message without removing dots 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
  "
",
  "[999D",
  "[J",
  "[32m◇[39m  foo.
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > stop > renders submit symbol and stops spinner 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
  "
",
  "[999D",
  "[J",
  "[32m◇[39m  
",
  "[?25h",
]
`;
